--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,7 @@
   animation: shake 0.3s;
 }
 
-.expected-key {
-  background: rgba(91, 205, 99, 0.593);
-  border-color: #ffe601;
-  transition: ease-out 0.3s;
-  color: #333;
-}
+
 
 @keyframes shake {
   0%, 100% { transform: translateX(0); }
@@ -53,11 +48,30 @@
   75% { transform: translateX(-3px); }
 }
 
+/* Button */
+.toggle-theme, .back-to-lessons {
+  border: 1px solid #555;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.app.dark .toggle-theme, 
+.app.dark .back-to-lessons {
+  background: #333;
+  color: #fff;
+  border: 1px solid #555;
+  padding: 8px;
+}
+.app.dark .toggle-theme:hover, 
+.app.dark .back-to-lessons:hover {
+  background: #414141;
+}
+
 /* Prompt Display */
 .prompt {
-  font-size: 24px;
+  font-size: 28px;
   letter-spacing: 2px;
-  margin: 20px;
+  margin: 40px 20px;
   text-align: center;
 }
 
@@ -71,9 +85,27 @@
 }
 
 .char.current {
-  background: #e3f2fd;
   color: #333;
   border-radius: 3px;
+  background: #ffe60164!important;
+}
+
+.practice-screen {
+  height: calc(100vh - 120px);
+}
+
+.practice-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  padding: 12px 16px;
+}
+
+.app.dark .practice-header {
+  border-bottom: 1px solid #535252;
+  border-top: 1px solid #535252;
 }
 
 /* Theme Color */
@@ -83,9 +115,16 @@ body {
   padding: 0;
 }
 
+.app.light {
+  padding: 8px;
+  height: fit-content;
+}
+
 .app.dark {
-  background: #1a1a1a;
-  color: white;
+  background: #1a1a1f;
+  color: rgb(155, 149, 149);
+  min-height: fit-content;
+  padding: 8px;
 }
 
 .app.dark .key {
@@ -93,22 +132,67 @@ body {
   border-color: #555;
 }
 
+.app.dark .expected-key {
+  background: rgba(105, 221, 112, 0.856)!important;
+  border-color: #ffe601fa;
+  transition: ease-out 0.3s;
+  color: #fff;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
 /* Lesson List */
 .lesson-list {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin: 20px 0;
+  margin: 20px 10px;
 }
 .lesson-card {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin: auto;
+  min-width: 500px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  /* background: #f8f9fa; */
 }
+
+.lesson-card .progress {
+  margin: auto 0;
+}
+
+.app.dark .lesson-card {
+  border: 1px solid #3f3e3e;
+}
+
 .lesson-card:hover {
   background: #e3f2fd;
   cursor: pointer;
+}
+
+.app.dark .lesson-card:hover {
+  background: #3d3f42;
+  cursor: pointer;
+}
+
+.app.dark .active-lesson {
+  background: #397b3b;
+}
+
+.app.dark .char.current {
+  color: #fefefa;
+}
+
+.expected-key {
+  background: rgba(91, 205, 99, 0.624);
+  border-color: #ffe601;
+  transition: ease-out 0.3s;
+  color: #333;
 }
